--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,17 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="20" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Include following permission if you want to cache images on SD card -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.wg.myviews.listactivity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,21 +26,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name="com.wg.myviews.YoukuActivity"
-            ></activity>
-        <activity 
-            android:name="com.wg.myviews.ToggleButActivity"
-            ></activity>
-        <activity 
-            android:name="com.wg.myviews.ScrollViewActivity"
-            ></activity>
-        <activity 
-            android:name="com.wg.myviews.CirImageActivity"
-            ></activity>
-        <activity 
-            android:name="com.wg.myviews.JniActivity"
-            ></activity>
+        <activity android:name="com.wg.myviews.listactivity.ImageLoaderActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.ToggleButActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.ScrollViewActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.CirImageActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.JniActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.ImageLoaderListActivity" >
+        </activity>
     </application>
 
 </manifest>
