--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name="com.wg.myviews.MyApplication"
@@ -54,7 +56,11 @@
         </activity>
         <activity android:name="com.wg.myviews.MapActivity" >
         </activity>
-		<!-- 百度定位服务 -->
+        <activity android:name="com.wg.myviews.VideoActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.MediaRecorderActivity" >
+        </activity>
+        <!-- 百度定位服务 -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
