--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="com.wg.myviews.MyApplication"
@@ -59,6 +60,10 @@
         <activity android:name="com.wg.myviews.VideoActivity" >
         </activity>
         <activity android:name="com.wg.myviews.MediaRecorderActivity" >
+        </activity>
+        <activity android:name="com.wg.myviews.MediaRecorderVideoActivity" 
+            >
+            
         </activity>
         <!-- 百度定位服务 -->
         <service
