--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,7 +63,9 @@
         </activity>
         <activity android:name="com.wg.myviews.MediaRecorderVideoActivity" 
             >
-            
+        </activity>
+        <activity android:name="com.wg.myviews.MediaRecorderVideoActivity2" 
+            >
         </activity>
         <!-- 百度定位服务 -->
         <service
